# bare

./: .editorconfig  .gitignore  Makefile  README.md  backup_script.sh.example  package-lock.json  pyproject.toml
.github/workflows/: ci.yaml
backup_reminder/: cli.py
src/: cli.py
src/backup_tools/: backup_checker.py
src/generator/: generator.py
tests/: helpers.py  test_cli_check.py  test_cli_commit.py  test_cli_init.py  test_cli_version.py  test_generator_init.py  test_load_config.py  test_new_backup_needed.py  test_update_config.py
tests/fixtures/after-init-config/: last-backup.yaml
tests/fixtures/incorrect-config/: last-backup.yaml
tests/fixtures/incorrect-timestamp/: last-backup.yaml
tests/fixtures/last-backup-in-future/: last-backup.yaml
tests/fixtures/last-backup-in-past/: last-backup.yaml
tests/fixtures/without-backup-interval-key/: last-backup.yaml
